# iced_timer

./: Cargo.toml  Justfile
src/: init_panel.rs  input_view.rs  main.rs  timer_panel.rs
