[package]
name = "iced_timer"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["debug"] }
iced_anim = { version = "0.1.4", features = ["widgets"] }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "local-time",
    "tracing-log",
] }
