[package]
name = "iced_timer"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["debug"] }
iced_anim = { version = "0.1.4", features = ["widgets"] }
jiff = "0.1.14"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "local-time",
    "tracing-log",
] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
